--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 window open with user defined name
             </button>
         </li>
+        <li>
+            <img src="resources/image/date_range-black-18dp.svg" onclick="open_top()">
+        </li>
     </ul>
 
     <h2>not my domain</h2>
