--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <a href="https://www.yahoo.com" target="_blank">target=_blank a tag</a>
         </li>
         <li>
+            <a href="https://www.yahoo.com">just a tag</a>
+        </li>
+        <li>
             <button onclick="open_default()">
                 window open default
             </button>
@@ -57,6 +60,9 @@
     <ul>
         <li>
             <a href="https://sports.pa.betmgm.com/" target="_blank">target=_blank a tag</a>
+        </li>
+        <li>
+            <a href="https://sports.pa.betmgm.com/">just a tag</a>
         </li>
         <li>
             <button onclick="open_default2()">
