add nested buttons

--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
         <a href="https://sports.yahoo.com/ncaab/oral-roberts-golden-eagles-ohio-state-buckeyes-202103190443/" target="_blank" class="C(scores-primary-color) C(scores-primary-color):link C(scores-primary-color):visited Td(n) Bgc(scores-hover-color):h Cur(p)">
             Luke: added some text here, so it can't be seen
         </a>
+
+        <a href="https://sports.yahoo.com/ncaab/oral-roberts-golden-eagles-ohio-state-buckeyes-202103190443/" target="_blank" class="C(scores-primary-color) C(scores-primary-color):link C(scores-primary-color):visited Td(n) Bgc(scores-hover-color):h Cur(p)">
+            <div class="Px(16px)! scorestrip-game H(100%) Px(7px) Pb(6px) Bdend(scores-row-border) Fz(12px) Bxz(bb)" style="min-width: 150px;">
+            <div class="H(36px) C(scores-color-status) D(f) Ai(c)">
+                <img height="20" width="20" src="https://s.yimg.com/iu/api/res/1.2/lYNmxaZS3IPYuON1eAu7hg--~B/YXBwaWQ9c2hhcmVkO2ZpPWZpbGw7cT0xMDA7aD01MDt3PTUw/https://s.yimg.com/cv/apiv2/default/ncaab/20190108/500x500/oral_roberts.png" alt="Oral Roberts">
+            </div>
+            <button onclick="open_top2()">
+                window open top
+            </button>
+            <button onclick="open_yahoo_sportsbook2()">
+                window open with user defined name
+            </button>
+            </div>
+        </a>
     </ul>
 
     <script>
